# crybaby

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-versions-test.yml
crybaby/: __init__.py  exceptions.py
tests/: conftest.py  test_basic.py
