[project]
name = "crybaby"
dynamic = ["version"]
description = "Python exception handler that sends error messages to Slack."
readme = "README.md"
requires-python = ">=3.6.0"
license = "MIT"
authors = [
    { name = "gyudoza", email = "jujumilk3@gmail.com" },
]
classifiers = [
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
]

[project.urls]
homepage = "https://github.com/jujumilk3/crybaby"
bug-tracker = "https://github.com/jujumilk3/crybaby/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "crybaby/__init__.py"

packages=["crybaby"]

[tool.black]
line-length = 120